{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 28,
  "lineage": "1b0d6b9a-04b8-c5b7-124c-3fadb6247248",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f4c1df89351174a4",
            "domain": "vpc",
            "id": "eipalloc-044fa0fcf2ef9d8b9",
            "instance": "i-0991601889d7a85aa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0308dcf4eeb445479",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_ip": "10.0.1.100",
            "public_dns": "ec2-34-233-214-48.compute-1.amazonaws.com",
            "public_ip": "34.233.214.48",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.tf_Server",
            "aws_security_group.tf_SG",
            "aws_subnet.tf_Subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d315ad33b9d49c4",
            "arn": "arn:aws:ec2:us-east-1:602705425003:instance/i-0991601889d7a85aa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0991601889d7a85aa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyUSE1KP",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0308dcf4eeb445479",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_ip": "10.0.1.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f579299d5310ccea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0374162bad465df3c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5932b72ca83c624",
            "tags": {
              "Name": "Terraform-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0374162bad465df3c"
            ]
          },
          "dependencies": [
            "aws_security_group.tf_SG",
            "aws_subnet.tf_Subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602705425003:internet-gateway/igw-0dc274d38587a071d",
            "id": "igw-0dc274d38587a071d",
            "owner_id": "602705425003",
            "tags": {
              "Name": "Terraform_IGW"
            },
            "vpc_id": "vpc-0459ceed3b89c542f"
          },
          "dependencies": [
            "aws_vpc.tf_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0db4ac9425bfd5e6a",
            "owner_id": "602705425003",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc274d38587a071d",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc274d38587a071d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_RT"
            },
            "vpc_id": "vpc-0459ceed3b89c542f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf_IGW",
            "aws_vpc.tf_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_RTandSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c798d5e13f0a5847",
            "route_table_id": "rtb-0db4ac9425bfd5e6a",
            "subnet_id": "subnet-0a5932b72ca83c624"
          },
          "dependencies": [
            "aws_internet_gateway.tf_IGW",
            "aws_route_table.tf_RT",
            "aws_subnet.tf_Subnet-1",
            "aws_vpc.tf_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602705425003:security-group/sg-0374162bad465df3c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0374162bad465df3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Terraform-Security-group",
            "name_prefix": "",
            "owner_id": "602705425003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0459ceed3b89c542f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602705425003:subnet/subnet-0a5932b72ca83c624",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a5932b72ca83c624",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602705425003",
            "tags": {
              "Name": "Terraform-Subnet-Public"
            },
            "vpc_id": "vpc-0459ceed3b89c542f"
          },
          "dependencies": [
            "aws_vpc.tf_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602705425003:vpc/vpc-0459ceed3b89c542f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd3d65494ca29251",
            "default_route_table_id": "rtb-0a736e0ba6ae92b90",
            "default_security_group_id": "sg-0bc78ce670f07c540",
            "dhcp_options_id": "dopt-f99b2583",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0459ceed3b89c542f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a736e0ba6ae92b90",
            "owner_id": "602705425003",
            "tags": {
              "Name": "Terraform_VPC"
            }
          }
        }
      ]
    }
  ]
}